--- a/conf/data/sim_deeper_30.yaml
+++ b/conf/data/sim_deeper_30.yaml
@@ -1,6 +1,7 @@
 data:
   name: sim_deeper_30
   path: data/sim/deeper/observations_30
+  tstep: 30.0
   file_patterns:
     dive: dive
     depths: depths
