--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -15,6 +15,8 @@ sub_paths: # created under the output directory for each model run
   figures: figures
   posterior_predictions: posterior_predictions
   comparisons: comparisons
+  dives: dives
+  posteriors: posteriors
 
 base_names: # files containing analysis artifacts/output
   fit: sampler_trace.RData  # MCMC chain from gibbs sampler over model params.
