--- a/conf/priors/tyack_priors.yaml
+++ b/conf/priors/tyack_priors.yaml
@@ -1,14 +1,14 @@
 sampler:
-  name: standard_priors
+  name: simulation_priors
   descent_speed: # parameterization for gamma prior on lambda1 (m/s)
-    mu: 1.25
-    sd: .5
+    mu: 1.5
+    sd: .1
   forage_speed: # parameterization for gamma prior on lambda2 (m/s)
     mu: .3
-    sd: .1
-  ascent_speed: # parameterization for gamma prior on lambda3 (m/s)
-    mu: .5
     sd: .3
+  ascent_speed: # parameterization for gamma prior on lambda3 (m/s)
+    mu: .7
+    sd: .2
   descent_preference: # parameterization for beta prior on pi1
     mu: .9
     shape2: 2
@@ -16,4 +16,5 @@ sampler:
     mu: .1
     shape1: 2
   description: Use the 85% rule to estimate prior parameters for stage
-    transition times from data.
+    transition times from data.  Set priors for descent and ascent speeds from
+    Tyack (2006), Table 2, and infer prior for forage speed from same paper.
