--- a/conf/observation_model/beta_systematic.yaml
+++ b/conf/observation_model/beta_systematic.yaml
@@ -3,10 +3,14 @@ observation_model:
   parameters:
     shape1: 1
     shape2: 1
+  parameters_tf:
+    shape1: 1
+    shape2: 1
   description: |
     Dives are observed according to a systematic sampling design.  Observations
     are made at times t_i = t0 + eps + (i-1) * dt, where the dive begins at
     t0 = 0, eps = 2 * tstep * B - tstep where B ~ Beta(a,b), and dt is the time
     between observations.  Observations at times before t0 are ignored, and the
     offset eps is unknown.  The distribution for eps is a scaled and shifted
-    beta distribution.
+    beta distribution.  A similar assumption is made for the end of the dive,
+    tf.
