adding support for sampler restarting

--- a/conf/sampler/prod.yaml
+++ b/conf/sampler/prod.yaml
@@ -4,4 +4,5 @@ sampler:
   checkpoint_interval: 1800
   iterations: 10000
   burn: 1000
+  restart: FALSE
   description: Long run of Gibbs sampler for full analyses.
