--- a/conf/sampler/prod_restart.yaml
+++ b/conf/sampler/prod_restart.yaml
@@ -5,5 +5,6 @@ sampler:
   iterations: 10000
   burn: 1000
   restart: TRUE
+  warmup: Inf
   description: Long run of Gibbs sampler for full analyses, but will load
     posterior samples
