--- a/conf/data/sim_tyack_more_300.yaml
+++ b/conf/data/sim_tyack_more_300.yaml
@@ -5,5 +5,6 @@ data:
   file_patterns:
     dive: dive
     depths: depths
+    covariates: NULL
   description: Observations of simulated dives.  Dives are observed every 300 seconds.  Complete
     dives are stored in ../truth.
